--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>dwv-jqmobile</title>
 <meta charset='utf-8' />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<meta name="description" content="dwv-jqmobile: medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile." />
+<meta name="description" content="Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile." />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 <style>
@@ -180,7 +180,7 @@ window.onload = function() {
 <a id="forkme_banner" href="https://github.com/ivmartel/dwv-jqmobile">Fork Me on GitHub</a>
 
 <h1 id="project_title">dwv-jqmobile</h1>
-<h2 id="project_tagline">Simple viewer using DWV (DICOM Web Viewer).</h2>
+<h2 id="project_tagline">Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile.</h2>
 
 <section id="downloads">
 <a class="zip_download_link" href="https://github.com/ivmartel/dwv-jqmobile/zipball/master">Download this project as a .zip file</a>
@@ -193,11 +193,13 @@ window.onload = function() {
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<p><a href="https://github.com/ivmartel/dwv">DWV</a> (DICOM Web Viewer) is an open source zero footprint medical image viewer.
+<p><a href="https://github.com/ivmartel/dwv">DWV</a> (DICOM Web Viewer) is an open source zero footprint medical image viewer library.
 It uses only javascript and HTML5 technologies, meaning that it can be run on any
 platform that provides a modern browser (laptop, tablet, phone and even modern TVs).
 It can load local or remote data in DICOM format (the standard for medical imaging
-data such as MR, CT, Echo, Mammo, NM...) and provides standard tools for its
+data such as MR, CT, Echo, Mammo, NM...).</p>
+
+<p>This viewer provides standard tools for image
 manipulation such as contrast, zoom, drag, possibility to draw regions on top of the
 image and imaging filters such as threshold and sharpening.</p>
 
