Fix magic wand include

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body { margin: 10px; padding: 0; }
 <script type="text/javascript" src="node_modules/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
 <script type="text/javascript" src="node_modules/jszip/dist/jszip.min.js"></script>
 <script type="text/javascript" src="node_modules/konva/konva.min.js"></script>
-<script type="text/javascript" src="node_modules/magic-wand-js/js/magic-wand.min.js"></script>
+<script type="text/javascript" src="node_modules/magic-wand-js/js/magic-wand-min.js"></script>
 <!-- Third party (viewer) -->
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="ext/jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
