--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>DICOM Web Viewer</title>
 <meta charset="UTF-8">
-<meta name="description" content="Medical viezer using DWV (DICOM Web Viewer) and jQery Mobile.">
+<meta name="description" content="Medical viewer using DWV (DICOM Web Viewer) and jQery Mobile.">
 <meta name="keywords" content="DICOM,HTML5,JavaScript,medical,imaging,DWV">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="theme-color" content="#2F3BA2"/>
