Move css to style file.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 <meta name="theme-color" content="#2F3BA2"/>
 <link rel="manifest" href="resources/manifest.json">
 <link type="text/css" rel="stylesheet" href="css/style.css" />
-<style type="text/css" >
-body { margin: 10px; padding: 0; }
-.layerContainer { margin: auto; text-align: center; }
-.imageLayer { left: 0px; }
-.dropBox { margin: 20px auto; }
-.inline { display: inline-block !important; }
-</style>
 <link type="text/css" rel="stylesheet" href="ext/jquery-mobile/jquery.mobile-1.4.5.min.css" />
 <link type="text/css" rel="stylesheet" href="node_modules/nprogress/nprogress.css" />
 <style type="text/css" >
@@ -68,7 +61,7 @@ body { margin: 10px; padding: 0; }
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/arithmetic_decoder.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/jpg.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/rii-mango/lossless-min.js"></script>
-<!-- Local -->
+<!-- dwv -->
 <script type="text/javascript" src="node_modules/dwv/dist/dwv.min.js"></script>
 
 <!-- Google -->
