Use local google and dropbox scripts.

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 <script type="text/javascript" src="node_modules/dwv/dist/dwv.min.js"></script>
 
 <!-- Google -->
-<script type="text/javascript" src="https://apis.google.com/js/client.js"></script>
-<script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
+<script type="text/javascript" src="ext/google-api-javascript-client/client.js"></script>
+<script type="text/javascript" src="ext/google-api-javascript-client/api.js"></script>
 <script type="text/javascript" src="src/google.js"></script>
 
 <!-- Dropbox -->
-<script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js"
+<script type="text/javascript" src="ext/dropbox-dropins/dropins.js"
     id="dropboxjs" data-app-key="96u3396jtx3bwr8"></script>
 <script type="text/javascript" src="src/dropbox.js"></script>
 
