--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ ul a {text-decoration:none;}
 ul li p {font-size:80%;}
 </style>
 
-<!-- <script>
+<script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-40868511-1', 'github.io');
 ga('send', 'pageview');
-</script>-->
+</script>
 
 <script type="text/javascript">
 var githubRaw = "https://raw.githubusercontent.com/ivmartel/dwv/master/tests/data/";
