--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <script type="text/javascript" src="src/dropbox.js"></script>
 
 <!-- Launch the app -->
+<script type="text/javascript" src="src/register-sw.js"></script>
 <script type="text/javascript" src="src/appgui.js"></script>
 <script type="text/javascript" src="src/applauncher.js"></script>
 </head>
