Update dwv to v0.25.2. Fixes #17.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div data-role="page" data-theme="b" id="main">
 
 <!-- pageHeader #dwvversion -->
-<div id="pageHeader" data-role="header">
+<div id="pageHeader" data-role="header" data-position="fixed">
 <h1>DWV <span class="dwv-version"></span></h1>
 <a href="#help_page" data-icon="carat-r" class="ui-btn-right"
   data-transition="slide" data-i18n="basics.help">Help</a>
@@ -143,7 +143,7 @@
 
 </div><!-- /content -->
 
-<div data-role="footer">
+<div data-role="footer" data-position="fixed">
 <div data-role="navbar" class="toolList">
 </div><!-- /navbar -->
 </div><!-- /footer -->
