Import rle script.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <script type="text/javascript" src="node_modules/nprogress/nprogress.js"></script>
 <script type="text/javascript" src="ext/flot/jquery.flot.min.js"></script>
 <!-- decoders -->
+<script type="text/javascript" src="node_modules/dwv/decoders/dwv/rle.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/jpx.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/util.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/arithmetic_decoder.js"></script>
