--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="DICOM,HTML5,JavaScript,medical,imaging,DWV">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="theme-color" content="#2F3BA2"/>
-<link rel="manifest" href="resources/manifest.json">
+<link rel="manifest" href="manifest.json">
 <link type="text/css" rel="stylesheet" href="css/style.css" />
 <link type="text/css" rel="stylesheet" href="ext/jquery-mobile/jquery.mobile-1.4.5.min.css" />
 <link type="text/css" rel="stylesheet" href="node_modules/nprogress/nprogress.css" />
