--- a/demo/stable/index.html
+++ b/demo/stable/index.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="DICOM,HTML5,JavaScript,medical,imaging,DWV">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="theme-color" content="#2F3BA2"/>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="manifest" href="manifest.json">
 <link type="text/css" rel="stylesheet" href="css/style.css" />
 <link type="text/css" rel="stylesheet" href="ext/jquery-mobile/jquery.mobile-1.4.5.min.css" />
@@ -29,19 +30,19 @@
 </style>
 <!-- mobile web app -->
 <meta name="mobile-web-app-capable" content="yes" />
-<link rel="shortcut icon" sizes="16x16" href="resources/icons/dwv-16.png" />
-<link rel="shortcut icon" sizes="32x32" href="resources/icons/dwv-32.png" />
-<link rel="shortcut icon" sizes="64x64" href="resources/icons/dwv-64.png" />
-<link rel="shortcut icon" sizes="128x128" href="resources/icons/dwv-128.png" />
-<link rel="shortcut icon" sizes="256x256" href="resources/icons/dwv-256.png" />
+<link rel="shortcut icon" sizes="16x16" href="resources/icons/icon-16.png" />
+<link rel="shortcut icon" sizes="32x32" href="resources/icons/icon-32.png" />
+<link rel="shortcut icon" sizes="64x64" href="resources/icons/icon-64.png" />
+<link rel="shortcut icon" sizes="128x128" href="resources/icons/icon-128.png" />
+<link rel="shortcut icon" sizes="256x256" href="resources/icons/icon-256.png" />
 <!-- apple specific -->
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<link rel="apple-touch-icon" sizes="16x16" href="resources/icons/dwv-16.png" />
-<link rel="apple-touch-icon" sizes="32x32" href="resources/icons/dwv-32.png" />
-<link rel="apple-touch-icon" sizes="64x64" href="resources/icons/dwv-64.png" />
-<link rel="apple-touch-icon" sizes="128x128" href="resources/icons/dwv-128.png" />
-<link rel="apple-touch-icon" sizes="256x256" href="resources/icons/dwv-256.png" />
+<link rel="apple-touch-icon" sizes="16x16" href="resources/icons/icon-16.png" />
+<link rel="apple-touch-icon" sizes="32x32" href="resources/icons/icon-32.png" />
+<link rel="apple-touch-icon" sizes="64x64" href="resources/icons/icon-64.png" />
+<link rel="apple-touch-icon" sizes="128x128" href="resources/icons/icon-128.png" />
+<link rel="apple-touch-icon" sizes="256x256" href="resources/icons/icon-256.png" />
 <!-- Third party (dwv) -->
 <script type="text/javascript" src="node_modules/i18next/i18next.min.js"></script>
 <script type="text/javascript" src="node_modules/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
