First gui code move.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,25 @@
     id="dropboxjs" data-app-key="96u3396jtx3bwr8"></script>
 <script type="text/javascript" src="src/dropbox.js"></script>
 
+<!-- browser -->
+<script type="text/javascript" src="src/utils/browser.js"></script>
+<script type="text/javascript" src="src/utils/modernizr.js"></script>
+
+<!-- gui -->
+<script type="text/javascript" src="src/gui/custom.js"></script>
+<script type="text/javascript" src="src/gui/filter.js"></script>
+<script type="text/javascript" src="src/gui/generic.js"></script>
+<script type="text/javascript" src="src/gui/help.js"></script>
+<script type="text/javascript" src="src/gui/html.js"></script>
+<script type="text/javascript" src="src/gui/loader.js"></script>
+<script type="text/javascript" src="src/gui/tools.js"></script>
+<script type="text/javascript" src="src/gui/undo.js"></script>
+
 <!-- Launch the app -->
 <script type="text/javascript" src="src/register-sw.js"></script>
 <script type="text/javascript" src="src/appgui.js"></script>
 <script type="text/javascript" src="src/applauncher.js"></script>
+
 </head>
 
 <body>
