Integrate dropbox amd info. Update gui and launch.

--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
 
 <!-- gui -->
 <script type="text/javascript" src="src/gui/custom.js"></script>
+<script type="text/javascript" src="src/gui/dropBoxLoader.js"></script>
 <script type="text/javascript" src="src/gui/filter.js"></script>
 <script type="text/javascript" src="src/gui/generic.js"></script>
 <script type="text/javascript" src="src/gui/help.js"></script>
 <script type="text/javascript" src="src/gui/html.js"></script>
+<script type="text/javascript" src="src/gui/infoController.js"></script>
+<script type="text/javascript" src="src/gui/infoOverlay.js"></script>
 <script type="text/javascript" src="src/gui/loader.js"></script>
 <script type="text/javascript" src="src/gui/tools.js"></script>
 <script type="text/javascript" src="src/gui/undo.js"></script>
