--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 <!-- Layer Container -->
 <div class="layerContainer">
-<div class="dropBox"></div>
+<div class="dropBox dropBoxBorder"></div>
 <canvas class="imageLayer">Only for HTML5 compatible browsers...</canvas>
 <div class="drawDiv"></div>
 <div class="infoLayer">
