--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <!-- gui -->
 <script type="text/javascript" src="src/gui/custom.js"></script>
-<script type="text/javascript" src="src/gui/dropBoxLoader.js"></script>
+<script type="text/javascript" src="src/gui/dropboxLoader.js"></script>
 <script type="text/javascript" src="src/gui/filter.js"></script>
 <script type="text/javascript" src="src/gui/generic.js"></script>
 <script type="text/javascript" src="src/gui/help.js"></script>
