Improve dropbox logic.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <!-- Layer Container -->
 <div class="layerContainer">
 <canvas class="imageLayer">Only for HTML5 compatible browsers...</canvas>
-<div class="dropBox dropBoxBorder"></div>
+<div class="dropBox"></div>
 <div class="drawDiv"></div>
 <div class="infoLayer">
 <div class="infotl info"></div>
