--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>DICOM Web Viewer</title>
 <meta charset="UTF-8">
-<meta name="description" content="Medical viewer using DWV (DICOM Web Viewer) and jQery Mobile.">
+<meta name="description" content="Medical viewer using DWV (DICOM Web Viewer) and jQuery Mobile.">
 <meta name="keywords" content="DICOM,HTML5,JavaScript,medical,imaging,DWV">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta name="theme-color" content="#2F3BA2"/>
@@ -106,7 +106,7 @@
 
 <!-- pageHeader #dwvversion -->
 <div id="pageHeader" data-role="header" data-position="fixed">
-<h1>DWV <span class="dwv-version"></span></h1>
+<h1>dwv-jqmobile <span class="dwv-version"></span></h1>
 <a href="#help_page" data-icon="carat-r" class="ui-btn-right"
   data-transition="slide" data-i18n="basics.help">Help</a>
 </div><!-- /pageHeader -->
