--- a/index.html
+++ b/index.html
@@ -141,19 +141,20 @@
 </div>
 </div><!-- /popup -->
 
+<div id="dropBox"></div>
+
 <!-- Layer Container -->
 <div class="layerContainer">
-<div class="dropBox"></div>
-<div class="infoLayer">
-<div class="infotl info"></div>
-<div class="infotc infoc"></div>
-<div class="infotr info"></div>
-<div class="infocl infoc"></div>
-<div class="infocr infoc"></div>
-<div class="infobl info"></div>
-<div class="infobc infoc"></div>
-<div class="infobr info"></div>
-</div><!-- /infoLayer -->
+  <div class="infoLayer">
+    <div class="infotl info"></div>
+    <div class="infotc infoc"></div>
+    <div class="infotr info"></div>
+    <div class="infocl infoc"></div>
+    <div class="infocr infoc"></div>
+    <div class="infobl info"></div>
+    <div class="infobc infoc"></div>
+    <div class="infobr info"></div>
+  </div><!-- /infoLayer -->
 </div><!-- /layerContainer -->
 
 <!-- History -->
