--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <div id="dwv">
 
 <!-- Layer Container -->
-<div id="layerGroup0">
+<div id="layerGroup0" class="layerGroup">
   <div id="infoLayer">
     <div id="infotl" class="infotl info"></div>
     <div id="infotc" class="infotc infoc"></div>
