Add i18next dependency and translation files

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 <link rel="apple-touch-icon" sizes="128x128" href="resources/icons/icon-128.png" />
 <link rel="apple-touch-icon" sizes="256x256" href="resources/icons/icon-256.png" />
 <!-- Third party (dwv) -->
-<script type="text/javascript" src="node_modules/i18next/i18next.min.js"></script>
-<script type="text/javascript" src="node_modules/i18next-http-backend/i18nextHttpBackend.min.js"></script>
-<script type="text/javascript" src="node_modules/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
 <script type="text/javascript" src="node_modules/jszip/dist/jszip.min.js"></script>
 <script type="text/javascript" src="node_modules/konva/konva.min.js"></script>
 <script type="text/javascript" src="node_modules/magic-wand-tool/dist/magic-wand.min.js"></script>
@@ -55,6 +52,9 @@
 <script type="text/javascript" src="ext/jquery-mobile/jquery.mobile-1.4.5.min.js"></script>
 <script type="text/javascript" src="node_modules/nprogress/nprogress.js"></script>
 <script type="text/javascript" src="ext/flot/jquery.flot.min.js"></script>
+<script type="text/javascript" src="node_modules/i18next/i18next.min.js"></script>
+<script type="text/javascript" src="node_modules/i18next-http-backend/i18nextHttpBackend.min.js"></script>
+<script type="text/javascript" src="node_modules/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
 <!-- decoders -->
 <script type="text/javascript" src="node_modules/dwv/decoders/dwv/rle.js"></script>
 <script type="text/javascript" src="node_modules/dwv/decoders/pdfjs/jpx.js"></script>
@@ -75,8 +75,9 @@
     id="dropboxjs" data-app-key="96u3396jtx3bwr8"></script>
 <script type="text/javascript" src="src/dropbox.js"></script>
 
-<!-- browser -->
+<!-- utils -->
 <script type="text/javascript" src="src/utils/browser.js"></script>
+<script type="text/javascript" src="src/utils/i18n.js"></script>
 <script type="text/javascript" src="src/utils/modernizr.js"></script>
 
 <!-- gui -->
