--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <script type="text/javascript" src="src/gui/html.js"></script>
 <script type="text/javascript" src="src/gui/infoController.js"></script>
 <script type="text/javascript" src="src/gui/infoOverlay.js"></script>
+<script type="text/javascript" src="src/gui/listen.js"></script>
 <script type="text/javascript" src="src/gui/loader.js"></script>
 <script type="text/javascript" src="src/gui/tools.js"></script>
 <script type="text/javascript" src="src/gui/undo.js"></script>
